# git-buddy-bot

./: .flake8  .gitignore  README.md  bot.py  config.py  config_template.py  menu.py  pyproject.toml
src/gitbuddy/: bot.py  menu.py
tests/: test_bot.py  test_bot_for_test.py
