[tool.poetry]
name = "git-buddy-bot"
version = "0.1.0"
description = ""
authors = ["GuyMonagan <werevalkury@gmail.com>"]
readme = "README.md"
packages = [
    { include = "gitbuddy", from = "src" }
]


[tool.pytest.ini_options]
pythonpath = "src"


[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^6.2.1"
ruff = "^0.12.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
exclude = [
  ".git",
  "__pycache__",
  "venv",
  ".venv",
  ".mypy_cache",
  ".pytest_cache"
]

